--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -36,14 +36,14 @@ android {
     }
 
     defaultConfig {
-        // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId "com.example.travelmate"
-        // You can update the following values to match your application needs.
-        // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
         minSdkVersion flutter.minSdkVersion
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
+
+        // Enable multidex support
+        multiDexEnabled true
     }
 
     buildTypes {
@@ -52,6 +52,11 @@ android {
             // Signing with the debug keys for now, so `flutter run --release` works.
             signingConfig signingConfigs.debug
         }
+    }
+
+    // Add multidex dependency
+    dependencies {
+        implementation 'com.android.support:multidex:1.0.3'
     }
 }
 
