--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   sign_in_button: ^3.2.0
   url_launcher: ^6.2.3
   http: ^0.13.3
+  cloud_firestore: ^4.14.0
 
 dev_dependencies:
   flutter_test:
