--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   url_launcher: ^6.2.3
   http: ^0.13.3
   cloud_firestore: ^4.14.0
+  image_picker: ^0.8.4+8
+  firebase_storage: ^11.0.3
 
 dev_dependencies:
   flutter_test:
