--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   cloud_firestore: ^4.14.0
   image_picker: ^0.8.4+8
   firebase_storage: ^11.0.3
+  firebase_app_check: ^0.2.1+8
 
 dev_dependencies:
   flutter_test:
