--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,12 @@ dependencies:
   image_picker: ^0.8.4+8
   firebase_storage: ^11.0.3
   firebase_app_check: ^0.2.1+8
+  provider: ^5.0.0
+  google_maps_flutter: ^2.0.10
+  geolocator: ^9.0.0
+  geocoding: ^2.0.5
+  location: ^4.3.0
+  geofence_service: ^5.0.0
 
 dev_dependencies:
   flutter_test:
